Fixed some gradle run settings.