@@ -90,11 +90,13 @@ run {
                                  '--add-exports=javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED',
                                  '--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
                                  '--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
+                                 '--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED',
     ]
 
     jvmArgs = ['--add-exports=javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED',
                '--add-exports=javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED',
                '--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
                '--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
+               '--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED',
     ]
 }
